--- a/index.html
+++ b/index.html
@@ -47,6 +47,30 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
    
    <h2>Weekly Updates!</h2>
    
+   <h3>Sunday, February 23, 2020 ━━━━━━━━━━━━</h3>
+    <p>I will start another small project to learn more about machine learning! I will use pre-existing image sets (I will link which ones I use) and create an ML program which can identify handwritten digits! </p>
+   
+   <h3>Sunday, February 16, 2020 ━━━━━━━━━━━━</h3>
+    <p>I have worked with my friend to create a GUI using kivy for our mental health app! We still need to improve the accuracy (we need to collect a lot more data), as well as further improve the user interface, before we work on making it an app. The source code will be on GitHub shortly. </p>
+   
+   <h3>Sunday, February 9, 2020 ━━━━━━━━━━━━</h3>
+    <p>Badminton tryouts were this past week! I got a spot on the team this year as well, and I am hoping to get an upper JV competing position this year. </p>
+   
+   <h3>Sunday, February 2, 2020 ━━━━━━━━━━━━</h3>
+    <p>My dance school's annual program was yesterday! It went really well and I am happy with my performance. I enjoyed participating in all three dances and I am incredibly thrilled to have been a part women's empowerment dance! </p>
+   
+   <h3>Sunday, January 26, 2020 ━━━━━━━━━━━━</h3>
+    <p>I started to watch a video series about using data science with machine learning. I will make a project based on what I learn once I finish the series. </p>
+   
+   <h3>Sunday, January 19, 2020 ━━━━━━━━━━━━</h3>
+    <p>I made some earrings today! I'm really happy with how these turned out, especially due to the more difficult wire work involved! </p>
+   
+   <h3>Sunday, January 12, 2020 ━━━━━━━━━━━━</h3>
+    <p>I started learning a third dance for my school's annual day, and it's about empowering women! My teacher asked me to be the lead for the acting portion of the dance, which I am really excited about! </p>
+   
+   <h3>Sunday, January 5, 2020 ━━━━━━━━━━━━</h3>
+    <p>Happy new year! My resolutions for this year include: keeping my room cleaner, making more time to create jewelry, and learning about new libraries/creating more projects! </p>
+   
    <h3>Saturday, December 29, 2019 ━━━━━━━━━━━━</h3>
     <p>I attended the <a href = "https://www.sclibrary.org/Home/Components/Calendar/Event/69950/7952" target = "_blank">SC Half-A-Hack-A-Thon</a> yesterday! I was not able to start my AI project earlier so I used the same idea as it worked with the theme given. My team won best overall! There are still many improvements to be made (turning it into an app with a nice GUI, improving the accuracy) and I will work on that over time. More details and the project can be found on my GitHub (<a href = "https://github.com/nidhiraviprasad/chatterbot" target = "_blank">here</a>).  </p>
    
@@ -89,7 +113,8 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
     <p>  ⋆ JavaScript [ReactJS games using <a href = "https://github.com/facebook/create-react-app" target = "_blank">create-react-app</a>]</p>
 
     <h3>My Projects [all available on GitHub] ━━━━━━━━━━━━</h3>
-    <p>  ⋆ Chatterbot — an AI program which talks users through their mental health issues and gives them advice to help them! (Python - tensorflow/tflearn, nltk)</p>
+    <p>  ⋆ Confide-A-Bot — an app using machine learning (ML) which talks users through their mental health issues and gives them advice to help them! (Python - tensorflow/tflearn, nltk, kivy)</p>
+    <p>  ⋆ Chatterbot — a preliminary version of Confide-A-Bot, consisting of a basic ML algorithm which talks to users about their mental health! (Python - tensorflow/tflearn, nltk)</p>
     <p>  ⋆ Sorting Hat Quiz — a five-question quiz which uses the results to sort the user into a Hogwarts House! (Javascript - ReactJs, create-react-app)</p>
     <p>  ⋆ My <a href = "http://rnidhi123.github.io/Final-Project---GWC/index3.html" target = "_blank">old website</a>! (HTML, CSS)</p>
     <p>  ⋆ This website! (HTML, CSS)</p>
